// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea should render correctly 1`] = `
.c0 {
  word-wrap: break-word;
  resize: none;
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #bfbfbf;
  outline: none;
  background-color: #ffffff;
  color: #373737;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: auto;
  -webkit-transition: border 0.2s ease;
  transition: border 0.2s ease;
}

.c0:hover {
  border-color: #3c5ad0;
}

.c0:focus {
  border-color: #3c5ad0;
  box-shadow: inset 0 0 0 2px #e8ecf5;
}

.c0:disabled,
.c0 [disabled] {
  border-color: #bfbfbf;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c0::-moz-placeholder {
  color: #bfbfbf;
}

.c0:-ms-input-placeholder {
  color: #bfbfbf;
}

.c0::placeholder {
  color: #bfbfbf;
}

<textarea
  class="c0"
  placeholder="placeholder"
  rows="1"
  style="overflow-x: hidden; word-wrap: break-word; overflow-y: hidden;"
/>
`;

exports[`Textarea should render correctly with minRows & maxRows 1`] = `
.c0 {
  word-wrap: break-word;
  resize: none;
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #bfbfbf;
  outline: none;
  background-color: #ffffff;
  color: #373737;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: auto;
  -webkit-transition: border 0.2s ease;
  transition: border 0.2s ease;
}

.c0:hover {
  border-color: #3c5ad0;
}

.c0:focus {
  border-color: #3c5ad0;
  box-shadow: inset 0 0 0 2px #e8ecf5;
}

.c0:disabled,
.c0 [disabled] {
  border-color: #bfbfbf;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c0::-moz-placeholder {
  color: #bfbfbf;
}

.c0:-ms-input-placeholder {
  color: #bfbfbf;
}

.c0::placeholder {
  color: #bfbfbf;
}

<textarea
  class="c0"
  id="demo"
  placeholder="placeholder"
  rows="3"
/>
`;
